# Schreier_Sims_algorithm

./: CMakeLists.txt
include/: BigInteger.hpp  Permutation.h  SchreierSimsTest.h  SchreierStabChain.h  SchreierTree.h  Test.h
my_task/: demoutput.txt  task.cpp
src/: BigInteger.cpp  Permutation.cpp  Permutation_Cycle.cpp  SchreierStabChain.cpp  SchreierTree.cpp  main.cpp
test/: SchreierSimsTest.cpp  Test.cpp
